--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf/renderer": "^4.3.0",
     "framer-motion": "^11.0.25",
-    "next": "14.1.4",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
+    "react-pdf": "^9.2.1",
     "sass": "^1.74.1"
   },
   "devDependencies": {
