--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@react-pdf/renderer": "^4.3.0",
     "framer-motion": "^11.0.25",
     "next": "^14.2.24",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-pdf": "^9.2.1",
-    "sass": "^1.74.1"
+    "sass": "^1.74.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
